--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@supabase/supabase-js": "^2.8.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.2",
     "expo-checkbox": "~2.2.2",
     "expo-status-bar": "~1.4.2",
+    "lottie-ios": "^3.4.1",
+    "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-checkbox-reanimated": "^0.1.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
