--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-dotenv": "^0.2.0",
+    "react-native-dotenv": "^3.4.7",
     "typescript": "^4.6.3"
   },
   "private": true
