Add new updates

--- a/app.json
+++ b/app.json
@@ -33,6 +33,18 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 33,
+            "targetSdkVersion": 33,
+            "buildToolsVersion": "33.0.0"
+          }
+        }
+      ]
+    ],
     "packagerOpts": {
       "config": "metro.config.js",
       "source": "metro.config.js",
