--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
-    "@stripe/stripe-react-native": "0.19.0",
     "@supabase/supabase-js": "^2.8.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.2",
+    "expo-build-properties": "~0.4.1",
     "expo-checkbox": "~2.2.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
