--- a/app.json
+++ b/app.json
@@ -44,6 +44,13 @@
             "buildToolsVersion": "33.0.0"
           }
         }
+      ],
+      [
+        "@stripe/stripe-react-native",
+        {
+          "merchantIdentifier": "merchant.com.todorocket",
+          "enableGooglePay": true
+        }
       ]
     ],
     "packagerOpts": {
