--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@stripe/stripe-react-native": "0.19.0",
     "@supabase/supabase-js": "^2.8.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.3",
     "expo-build-properties": "~0.4.1",
     "expo-checkbox": "~2.2.2",
     "expo-linear-gradient": "~12.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "lottie-ios": "^3.4.1",
     "lottie-react-native": "5.1.4",
@@ -31,8 +33,7 @@
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-web": "~0.18.9",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
