Fixing native dependencies

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -52,6 +52,8 @@ expo.webp.enabled=true
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
 
+android.disableAutomaticComponentCreation=true
+
 android.compileSdkVersion=33
 android.targetSdkVersion=33
 android.buildToolsVersion=33.0.0
