Fix: Fixed native android dependencies

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,3 +55,5 @@ expo.webp.animated=false
 android.compileSdkVersion=33
 android.targetSdkVersion=33
 android.buildToolsVersion=33.0.0
+
+android.disableAutomaticComponentCreation=true
