--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@supabase/supabase-js": "^2.8.0",
@@ -25,8 +26,9 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-checkbox-reanimated": "^0.1.1",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
