--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-checkbox-reanimated": "^0.1.1",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
