--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules/
 .env
 .env.development
 .env.development.local
+.env.production
+.env.production.local
 .env.local
 dist/
 npm-debug.*
