--- a/app.json
+++ b/app.json
@@ -43,7 +43,8 @@
             "buildToolsVersion": "33.0.0"
           }
         }
-      ]
+      ],
+      "sentry-expo"
     ],
     "packagerOpts": {
       "config": "metro.config.js",
