--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@sentry/react-native": "4.9.0",
     "@supabase/supabase-js": "^2.8.0",
     "expo": "~47.0.12",
+    "expo-application": "~5.0.1",
     "expo-build-properties": "~0.4.1",
     "expo-checkbox": "~2.2.2",
+    "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
+    "expo-updates": "~0.15.6",
     "lottie-ios": "^3.4.1",
     "lottie-react-native": "5.1.4",
     "react": "18.1.0",
@@ -33,7 +38,8 @@
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "sentry-expo": "~6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
